# unit_factory-mylibft

./: README.md  author  ft_strchr.c  ft_strncpy.c  ft_strrchr.c  main.c
libft00/: CMakeLists.txt  Makefile  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstmap.c  ft_memccpy.c  ft_memchr.c  ft_memmove.c  ft_pow.c  ft_strcmp.c  ft_strdup.c  ft_striter.c  ft_striteri.c  ft_strlen.c  ft_strncmp.c  ft_strncpy.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_tolower.c  ft_toupper.c  libft.h  main.c
